Add initial page of html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>pig-dice</title>
   </head>
   <body>
+    <div id="dice1" class="dice">0</div>
+    <div id="dice2" class="dice">0</div>
+    <button onclick="rolldice()">Rolldice</button>
+    <h2 id="status"></h2>
 
   </body>
 </html>
