Add chnges made to html file

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     <title>pig-dice</title>
   </head>
   <body>
-    <div id="dice1" class="dice">0</div>
-    <div id="dice2" class="dice">0</div>
-    <button onclick="rolldice()">Rolldice</button>
-    <h2 id="status"></h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h1>PLAYER 1</h1>
+              <div id="dice1" class="dice">0</div>
+              <div id="dice2" class="dice">0</div>
+              <button onclick="rolldice()">Rolldice</button>
+              <div id="status" class="total"></div>
 
   </body>
 </html>
