Add chnges made to html file

--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
           <h1>PLAYER 1</h1>
               <div id="dice1" class="dice">0</div>
               <div id="dice2" class="dice">0</div>
-              <button onclick="rolldice()">Rolldice</button>
+              <button onclick="rolldice1()">Rolldice</button>
               <div id="status" class="total"></div>
+              <h2 id="double1"></h2>
+            </div>
+            <div class="col-md-6">
+              <div id="dice3" class="dice">0</div>
+              <div id="dice4" class="dice">0</div>
+              <button onclick="rolldice2()">Rolldice</button>
+              <div id="status" class="total"></div>
+              <h3 id="double2"></h3>
+            </div>
+
 
   </body>
 </html>
