--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6" id="pit">
           <h1>PLAYER 1</h1>
               <div id="dice1" class="dice">0</div>
               <div id="dice2" class="dice">0</div>
@@ -19,13 +19,15 @@
               <div id="status" class="total"></div>
               <h2 id="double1"></h2>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" id="git">
+              <h3>PLAYER 2</h3>
               <div id="dice3" class="dice">0</div>
               <div id="dice4" class="dice">0</div>
               <button onclick="rolldice2()">Rolldice</button>
               <div id="status" class="total"></div>
-              <h3 id="double2"></h3>
+              <h4 id="double2"></h4>
             </div>
+          </div>
 
 
   </body>
