Add chnges made to html file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6" id="pit">
-          <h1>PLAYER 1</h1>
+          <h1 class="fit">PLAYER 1</h1>
               <div id="dice1" class="dice">0</div>
               <div id="dice2" class="dice">0</div>
               <button onclick="rolldice1()">Rolldice</button>
@@ -20,7 +20,7 @@
               <h2 id="double1"></h2>
             </div>
             <div class="col-md-6" id="git">
-              <h3>PLAYER 2</h3>
+              <h3 class="fit">PLAYER 2</h3>
               <div id="dice3" class="dice">0</div>
               <div id="dice4" class="dice">0</div>
               <button onclick="rolldice2()">Rolldice</button>
